--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,13 @@
   <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
 </span>
 
-<header class="panel-cover" style="background-image: url({{ site.baseurl }}/images/cover.jpg)">
+<header class="panel-cover" style="background-image: url({{ site.baseurl }}/images/santiago.jpg)">
   <div class="panel-main">
     <div class="panel-main__inner panel-inverted">
       <div class="panel-main__content">
         <a href="{{ site.baseurl }}/" title="link to home of {{ site.title }}">
           <img
-            src="{{ site.baseurl }}/images/profile.jpg"
+            src="{{ site.baseurl }}/images/profile.png"
             class="user-image"
             alt="My Profile Photo"
           />
